--- a/Creating_Patch_Labels_Redboud.ipynb
+++ b/Creating_Patch_Labels_Redboud.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Creating_Patch_Labels_Redboud.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPzJ9lkF/vecla+nO3tsJVa",
+      "authorship_tag": "ABX9TyNlBY/kRnBJOI/NxlpJji5S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,23 +29,27 @@
       "metadata": {
         "id": "ZIfZpeLOElX7",
         "colab_type": "code",
+        "outputId": "5f8c05ad-b1d8-4c97-e4ec-0b113ea2c4db",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "0000db5c-3dce-4a5a-801f-abadd4e52596"
+          "height": 124
+        }
       },
       "source": [
         "import os\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -66,17 +70,17 @@
       "metadata": {
         "id": "vzrz8TkLFNQT",
         "colab_type": "code",
+        "outputId": "e85fbb52-d186-4f94-a98e-bd881f976c89",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 399
-        },
-        "outputId": "48900b85-b22a-46b8-b7b9-0081f336176e"
+        }
       },
       "source": [
         "%cd /content/drive/My\\ Drive/a51ad4ec379a9209c740025a6d410708\n",
         "!ls "
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,11 +132,11 @@
       "metadata": {
         "id": "BjOlGOGDW9nD",
         "colab_type": "code",
+        "outputId": "4570b3e1-4fbe-45a5-b1cb-85e85fe6a9df",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "0b61a291-a639-4355-be2d-4265fb927e2c"
+        }
       },
       "source": [
         "#full version\n",
@@ -169,7 +173,7 @@
         "df = pd.DataFrame(image_labels)\n",
         "df"
       ],
-      "execution_count": 61,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -395,9 +399,22 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 61
+          "execution_count": 4
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Rf3tA_TFLpoF",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df.to_csv(r'/content/drive/My Drive/patch_labels.csv')"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
