--- a/data_loader.ipynb
+++ b/data_loader.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "data_loader.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM6EG8CK1zg3oN7qhzv9X3Y",
+      "authorship_tag": "ABX9TyMUGgiZ9SSc798NYrQEekht",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,18 +29,18 @@
       "metadata": {
         "id": "1c_3dJ4iMjRB",
         "colab_type": "code",
+        "outputId": "2401ebcf-6e93-4da9-fa6b-9260e2b52b03",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 124
-        },
-        "outputId": "48c44164-1b72-499d-9a3e-58414783b5eb"
+          "height": 122
+        }
       },
       "source": [
         "import os\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -81,17 +81,17 @@
       "metadata": {
         "id": "bleRJZCIMvjo",
         "colab_type": "code",
+        "outputId": "50be270e-f41f-432c-a84e-79add1f610d0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "0967df5e-4eeb-4c77-9f51-49977ed12f63"
+        }
       },
       "source": [
         "labels_frame = pd.read_csv('/content/drive/My Drive/patch_labels.csv')\n",
         "labels_frame.shape"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -103,7 +103,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -171,11 +171,11 @@
       "metadata": {
         "id": "ZbM-6fzsQYxC",
         "colab_type": "code",
+        "outputId": "ba3636e9-4e5d-4e22-b147-5ceba32d42ee",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 261
-        },
-        "outputId": "940866c8-51a1-46df-c0bc-5a823bbcdd3c"
+          "height": 258
+        }
       },
       "source": [
         "Redboud = RedboudDataset(csv_file='/content/drive/My Drive/patch_labels.csv',\n",
@@ -184,7 +184,7 @@
         "fig = plt.figure()\n",
         "\n",
         "for i in range(len(Redboud)):\n",
-        "    sample = face_dataset[i]\n",
+        "    sample = Redboud[i]\n",
         "    print('number, image size, grade')\n",
         "    print(i, sample['image'].shape, sample['labels'])\n",
         "\n",
@@ -198,7 +198,7 @@
         "        plt.show()\n",
         "        break"
       ],
-      "execution_count": 44,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
