save csv without the index

--- a/Creating_Patch_Labels_Redboud.ipynb
+++ b/Creating_Patch_Labels_Redboud.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Creating_Patch_Labels_Redboud.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNlBY/kRnBJOI/NxlpJji5S",
+      "authorship_tag": "ABX9TyNw5yl2Hdp5VQhPUuCgzMjr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,10 +29,10 @@
       "metadata": {
         "id": "ZIfZpeLOElX7",
         "colab_type": "code",
-        "outputId": "5f8c05ad-b1d8-4c97-e4ec-0b113ea2c4db",
+        "outputId": "869dcd90-521e-47a6-a023-9e817d0f73d6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 124
+          "height": 122
         }
       },
       "source": [
@@ -70,10 +70,10 @@
       "metadata": {
         "id": "vzrz8TkLFNQT",
         "colab_type": "code",
-        "outputId": "e85fbb52-d186-4f94-a98e-bd881f976c89",
+        "outputId": "7384ba0b-85cd-4de3-fdcb-6f50d6373d27",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 399
+          "height": 391
         }
       },
       "source": [
@@ -132,7 +132,7 @@
       "metadata": {
         "id": "BjOlGOGDW9nD",
         "colab_type": "code",
-        "outputId": "4570b3e1-4fbe-45a5-b1cb-85e85fe6a9df",
+        "outputId": "485772ba-b4dc-4d10-a478-7a06145d8bae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -399,7 +399,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 5
         }
       ]
     },
@@ -411,7 +411,7 @@
         "colab": {}
       },
       "source": [
-        "df.to_csv(r'/content/drive/My Drive/patch_labels.csv')"
+        "df.to_csv(r'/content/drive/My Drive/patch_labels.csv', index=False)"
       ],
       "execution_count": 0,
       "outputs": []
